PharmaDemo/src/objects/Call_Attendees__c.object
<CustomObject>
    <fields>
        <fullName>Call_Date__c</fullName>
        <label>Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Call_Notes__c</fullName>
        <label>Call Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Call_Report__c</fullName>
        <label>Call Report</label>
        <referenceTo>Call_Report__c</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>Call_Attendees</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Call Report</relationshipLabel>
        <relationshipName>R00Nj0000003oDLLEA2</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <picklist>
            <picklistValues>
                <fullName>Jan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jul</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sept</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nov</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dec</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Next_Call_Objective__c</fullName>
        <label>Next Call Objective</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appointment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Face to Face</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>IF( TEXT(Call_Report__r.Type__c) = &quot;Appointment&quot;, 
HYPERLINK(&quot;/&quot; &amp; Call_Report__r.Id  , IMAGE(&quot;/servlet/servlet.ImageServer?oid=00Dj0000001nzOo&amp;id=015j0000000e7fK&quot;,&quot;Appt&quot;),&quot;_parent&quot;), 
IF( TEXT(Call_Report__r.Type__c) = &quot;1:1&quot;, 
HYPERLINK(&quot;/&quot; &amp; Call_Report__r.Id , IMAGE(&quot;/servlet/servlet.ImageServer?oid=00Dj0000001nzOo&amp;id=015j0000000e7fL&quot;,&quot;Call&quot;),&quot;_parent&quot;),
HYPERLINK(&quot;/&quot; &amp; Call_Report__r.Id , IMAGE(&quot;/servlet/servlet.ImageServer?oid=00Dj0000001nzOo&amp;id=015j0000000e7fM&quot;,TEXT(Type__c)),&quot;_parent&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <label>Call Attendee</label>
    <nameField>
        <label>Call Attendee</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Call Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>